--- a/css/timeline.css
+++ b/css/timeline.css
@@ -9,7 +9,7 @@
   flex: 2;
   position: relative;
   margin-left: 20px;
-  border-left: 2px solid rgba(255, 255, 255, 0.1);
+  border-left: 2px solid rgba(8, 6, 6, 0.1);
   padding-left: 30px;
 }
 
@@ -21,11 +21,12 @@
   background-color: rgba(255, 255, 255, 0.05);
   display: none;
   animation: slideUp 0.3s ease forwards;
-  height: fit-content
+  height: fit-content;
 }
 
 #timeline-preview.visible {
   display: block;
+  width: 1100px;
 }
 
 @keyframes slideUp {
@@ -54,7 +55,7 @@
 .timeline-item::before {
   content: "";
   position: absolute;
-  left: -36px;
+  left: -42px;
   top: 20px;
   width: 16px;
   height: 16px;
